fix: editor selection alignment for fenced blocks, improve inline code contrast

--- a/css/github-markdown-dark_dimmed.css
+++ b/css/github-markdown-dark_dimmed.css
@@ -771,7 +771,7 @@
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: #656c7633;
+  background-color: #3b414a;
   border-radius: 6px;
 }
 
