--- a/css/github-markdown-light.css
+++ b/css/github-markdown-light.css
@@ -695,7 +695,7 @@
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: #818b981f;
+  background-color: #eff1f3;
   border-radius: 6px;
 }
 
